[package]
name = "realtime_game"
version = "0.1.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]

[dependencies]
mio = "0.6.14"
serde = "1.0.27"
serde_derive = "1.0.27"
middleman = "0.3.1"
mio-extras = "2.0.4"
clap = "2.31.2"
rand = "0.4"
ggez = "0.4"
bitset = "0.1.2"
noise = "0.5.1"
fnv = "1.0.6"
lazy_static = "1.0.0"